--- a/app/scss/components/_c-main-navigation.scss
+++ b/app/scss/components/_c-main-navigation.scss
@@ -46,6 +46,7 @@
       padding: 0 0 0 0.3%;
       left: 1.8vw;
       top: 0;
+      overflow: visible;
     }
 
     &.inView {
